--- a/index.html
+++ b/index.html
@@ -14,10 +14,12 @@
         
         <div>
             <h3 class="text-3xl mb-4 font-semibold">Please Login</h3>
-            <input type="email" name="email" placeholder="your email" id="" class="block mb-2 px-5 py-1 w-9/12">
-            <input type="password" name="password" placeholder="your password" id="" class ="block  px-5 py-1 w-9/12">
-            <button class="mt-3 px-8 font-medium py-2 rounded-lg bg-blue-600 hover:bg-blue-400 text-center ">Submit</button>
+            <input id="user_email" type="email" name="email" placeholder="your email" id="" class="block mb-2 px-5 py-1 w-9/12">
+            <input id="user_pass" type="password" name="password" placeholder="your password" id="" class ="block  px-5 py-1 w-9/12">
+            <button id="submit_btn" class="mt-3 px-8 font-medium py-2 rounded-lg bg-blue-600 hover:bg-blue-400 text-center ">Submit</button>
         </div>
     </section>
+
+    <script src="login.js"></script>
 </body>
 </html>
