A complete template with bank account login and deposit withdraw calculations

--- a/bank.html
+++ b/bank.html
@@ -12,7 +12,8 @@
 
 <body>
     <header>
-        <h1 class="text-5xl text-center mt-6">Functional <span class="text-red-500 font-semibold">bap er bank</span>!!!
+        <h1 class="text-5xl text-center mt-6">Bank History <span
+                class="text-red-500 font-semibold">Calculations</span>!!!
         </h1>
     </header>
 
