--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body>
-    <h1 class="text-5xl font-bold text-center mt-10">Welcome To your <span class="text-violet-600">bap er Bank</span></h1>
+    <h1 class="text-5xl font-bold text-center mt-10">Welcome To your <span class="text-violet-600">Bank account</span></h1>
 
     <section class="bg-rose-400 mx-auto p-10 w-3/4 mt-10">
         
