--- a/bank.html
+++ b/bank.html
@@ -43,14 +43,14 @@
             <div class="grid grid-cols-2 w-3/4 gap-4 mx-auto ">
                 <div class="bg-violet-400 p-8 rounded-lg">
                     <h4 class="text-white">Your Deposit</h4>
-                    <input id="deposit-field" type="number" placeholder="$ Ammount you want to deposit"
+                    <input id="deposit-field" type="number" placeholder="$ Deposit Ammount"
                         class="w-3/4 px-6 py-2 rounded block mt-4">
                     <button id="deposit-btn"
                         class="bg-blue-800 px-6 py-2 text-white rounded-lg font-medium mt-4 hover:bg-blue-600">Deposit</button>
                 </div>
                 <div class="bg-violet-400 p-8 rounded-lg">
                     <h4 class="text-white">Your Withdraw</h4>
-                    <input id="withraw-field" type="number" placeholder="$ Ammount you want to deposit"
+                    <input id="withraw-field" type="number" placeholder="$ Withdraw Ammount"
                         class="w-3/4 px-6 py-2 rounded block mt-4">
                     <button id="withdraw-btn"
                         class="bg-blue-800 px-6 py-2 text-white rounded-lg font-medium mt-4 hover:bg-blue-600">Withdraw</button>
