--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,19 +8,29 @@
     <title>bank</title>
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
+
 <body>
-    <h1 class="text-5xl font-bold text-center mt-10">Welcome To your <span class="text-violet-600">Bank account</span></h1>
+    <h1 class="text-5xl font-bold text-center mt-10">Welcome To your <span class="text-violet-600">Bank account</span>
+    </h1>
 
     <section class="bg-rose-400 mx-auto p-10 w-3/4 mt-10">
-        
+
         <div>
             <h3 class="text-3xl mb-4 font-semibold">Please Login</h3>
-            <input id="user_email" type="email" name="email" placeholder="your email" id="" class="block mb-2 px-5 py-1 w-9/12">
-            <input id="user_pass" type="password" name="password" placeholder="your password" id="" class ="block  px-5 py-1 w-9/12">
-            <button id="submit_btn" class="mt-3 px-8 font-medium py-2 rounded-lg bg-blue-600 hover:bg-blue-400 text-center ">Submit</button>
+            <input id="user_email" type="email" name="email" placeholder="your email" id=""
+                class="block mb-2 px-5 py-1 w-9/12">
+            <input id="user_pass" type="password" name="password" placeholder="your password" id=""
+                class="block  px-5 py-1 w-9/12">
+            <button id="submit_btn"
+                class="mt-3 px-8 font-medium py-2 rounded-lg bg-blue-600 hover:bg-blue-400 text-center ">Submit</button>
         </div>
+    </section>
+
+    <section class='mt-6 text-center'>
+        <p><small class="text-muted">Please use this email and pass to login : bank@gmail.com and pass: bank@gmail</small></p>
     </section>
 
     <script src="login.js"></script>
 </body>
+
 </html>
